# rust_grpc_server

./: .gitignore  Cargo.toml  DockerFile  Dockerfile  LICENSE  README.md  note.md
common/: Cargo.toml
common/src/: interceptor.rs  lib.rs  meta.rs  mytracer.rs  tracer.rs  utils.rs
common/src/clients/: consul.rs  mod.rs  reflection.rs
example-service/: Cargo.toml  build.sh  config.toml
example-service/src/: config.rs  main.rs
gateway/: Cargo.toml  config.toml  readme.md
gateway/migration/: ddl.sql
gateway/resources/: not_found_page.html
gateway/src/: config.rs  db.rs  main.rs  models.rs  reflection_client.rs  routers.rs  tracer.rs
gateway/src/entities/: mod.rs  prelude.rs  uri_grpc_mapping.rs
gateway/src/service/: grpc_manager.rs  mod.rs
grpc_proto/: Cargo.toml  build.rs
grpc_proto/proto/: helloworld.proto
grpc_proto/src/: lib.rs
grpc_proto/src/helloworld/: helloworld.rs
notes /: consul_nginx.md
proto/: Cargo.toml  build.rs
proto/protobuf/: cachekv.proto  helloworld.proto
proto/src/: lib.rs
proto/src/cachekv/: cachekv.rs
proto/src/helloworld/: helloworld.rs
src/: main.rs
src/client/: client.rs
src/server/: main.rs
