[package]
name = "rust-grpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-build = "0.9.2"
tonic = "0.9.2"
tokio = { version = "1", features = ["full"] }
grpc_proto = {path = "grpc_proto"}
prost = "0.11.9"
redis = "0.23.0"

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"