[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-attributes = "0.1.26"
tonic = "0.9.2"
uuid = {version = "1.4.1",features = ["serde", "v4"]}
toml = "0.7.6"
serde = { version = "1.0.130" }
serde_json = "1.0.68"
serde_derive = "1.0.130"

tempfile = "3.2.0"