[package]
name = "example-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio"] }
tokio = { version = "1.28", features = ["full"] }
tonic = "0.9.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-attributes = "0.1.26"
prost = "0.11.9"
redis = "0.23.0"
env_logger = "0.10.0"
hyper = "0.14.26"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
tonic-reflection = "0.9.2"
toml = "0.7.6"
lazy_static = "1.4.0"
log = "0.4.14"
chrono = "0.4.26"
uuid = {version = "1.4.1",features = ["serde", "v4"]}
proto = {path = "../proto"}
common = {path = "../common"}
[dev-dependencies]
clippy = "0.0.302"
