[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "0.10.0"
hyper = "0.14.26"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28", features = ["full"] }
toml = "0.7.6"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio"] }
tonic = "0.9.2"
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-attributes = "0.1.26"
common = {path = "../common"}
actix-web = "4.3.1"
tonic-reflection = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
tokio-stream = "0.1.14"
lazy_static = "1.4.0"
mysql = "24.0.0"
sea-orm = { version = "0.12.2", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
reqwest = "0.11.18"

